--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.css" />
 	<link rel="apple-touch-icon-precomposed" href="C:\Users\LT-MAINFRAME\Desktop\LocationAddApp-master\img\icon.png">
 	<link rel="apple-touch-startup-image" href="C:\Users\LT-MAINFRAME\Desktop\LocationAddApp-master\img\splash.png">
-	<link rel="stylesheet" href="css/geojoy.css">
-   	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="geojoy.css">
+   	<link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 
 	<script src="http://code.jquery.com/jquery-1.4.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
-	<script src="js/geoJoy.js" type="text/javascript"></script>
-	<script src="js/cordova-2.5.0.js" type="text/javascript"></script>
+	<script src="geoJoy.js" type="text/javascript"></script>
+	<script src="cordova-2.5.0.js" type="text/javascript"></script>
 	<!-- DELETE THIS IF YOU ARE FORKING, DEVELOPING AND/OR HOSTING ON YOUR OWN!
 	
 	<script type="text/javascript">
