--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="apple-touch-startup-image" href="C:\Users\LT-MAINFRAME\Desktop\LocationAddApp-master\img\splash.png">
 	<link rel="stylesheet" href="geojoy.css">
    	<link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="bootstrap-responsive.min.css">
 
 	<script src="http://code.jquery.com/jquery-1.4.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.js"></script>
